A new refactor of the MCP server for alignment with 2026-07-28 conformance.